--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
         </div>
         <!-- end of title -->
         <p class = "para-text">
-          O MORATO'S é uma hamburgueria artesanal, que trabalha não somente para entregar um bom lanche para os nossos clientes, mas nos comprometemos também em entregar uma experiência de sabor. Garantimos que nossos produtos sejam entregues com a qualidade e sabor que o cliente merece, prezamos pelos nossos diferenciais e trabalhamos todos os dias para melhorar. Reconhecemos nossos clientes fiéis e criamos o “MORATO'S Lovers”, um programa para beneficiar os amantes do MORATO'S Burger. Saiba mais sobre nós e aproveite todas as nossas promoções nos acompanhando no <a href="">Instagram</a>.
+          O MORATO'S é uma hamburgueria, que trabalha não somente para entregar um bom lanche para os nossos clientes, mas nos comprometemos também em entregar uma experiência de sabor. Garantimos que nossos produtos sejam entregues com a qualidade e sabor que o cliente merece, prezamos pelos nossos diferenciais e trabalhamos todos os dias para melhorar. Reconhecemos nossos clientes fiéis e criamos o “MORATO'S Lovers”, um programa para beneficiar os amantes do MORATO'S Burger. Saiba mais sobre nós e aproveite todas as nossas promoções nos acompanhando no <a href="">Instagram</a>.
         </p>
         <p class = "para-text"></p>
       </div>
 
       <div class = "about-right" data-aos = "fade-left">
-        <img src = "images/about-img.png" alt = "chef image">
+        <img src = "images/pngegg.png" alt = "chef image">
       </div>
     </section>
     <!-- end of about -->
