--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
     <section id = "contact" class = "contact section-py">
       <div class = "contact-wrapper container">
         <div class = "contact-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.6261332423937!2d-43.922154585678165!3d-19.898002742452228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69a38ac079159%3A0x4f4c68a3d2d8a72a!2sR.%20S%C3%A3o%20Joaquim%2C%20636%20-%20Sagrada%20Fam%C3%ADlia%2C%20Belo%20Horizonte%20-%20MG%2C%2031035-470!5e0!3m2!1spt-BR!2sbr!4v1646343315225!5m2!1spt-BR!2sbr" width="500" height="100%" style="border:0;" allowfullscreen="false" loading="lazy"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.6261332423937!2d-43.922154585678165!3d-19.898002742452228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69a38ac079159%3A0x4f4c68a3d2d8a72a!2sR.%20S%C3%A3o%20Joaquim%2C%20636%20-%20Sagrada%20Fam%C3%ADlia%2C%20Belo%20Horizonte%20-%20MG%2C%2031035-470!5e0!3m2!1spt-BR!2sbr!4v1646343315225!5m2!1spt-BR!2sbr" width="290px" height="100%" style="border:0;" allowfullscreen="false" loading="lazy"></iframe>
         </div>
 
         <div class = "contact-info">
